Added visualizations for the  first set of results

--- a/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "640e0d14",
+   "id": "90548157",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.815745Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "adca1e81",
+   "id": "d0f1e528",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.842562Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3ec91a08",
+   "id": "d0a4ef74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.865340Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2a0f168",
+   "id": "057bfc81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.889087Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d75ce572",
+   "id": "766f306d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.914950Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0c7504cc",
+   "id": "4a8e4b30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.591524Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b0c48dc2",
+   "id": "ba4992c2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.601249Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f4611243",
+   "id": "482801a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.613228Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c017f49",
+   "id": "03888039",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b48f1f57",
+   "id": "8f8dfd52",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:45.963780Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a34e890",
+   "id": "887ea2b3",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4612337c",
+   "id": "d23309ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:46.959384Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2c3c05c",
+   "id": "9b9ed68d",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2a150cbd",
+   "id": "78100cb0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.478334Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03fd0292",
+   "id": "e75e8ff3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.956511Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "d01fa994",
+   "id": "22a66ca0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.985456Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "981b2afc",
+   "id": "87f5e81c",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e5af6425",
+   "id": "e8f73216",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:53.444155Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1b8a8f92",
+   "id": "0e074ae6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:53.498731Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "0d8a3a90",
+   "id": "034e070e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.693505Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "50798b80",
+   "id": "cac8bede",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.719810Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "68cf669c",
+   "id": "0410c54a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.772881Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8477f063",
+   "id": "beb4ca58",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "feb233df",
+   "id": "be2b1936",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4164df03",
+   "id": "f18aeffa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.773105Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "b29800b2",
+   "id": "5bda729b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.812935Z",
@@ -701,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "02e8ed5a",
+   "execution_count": 23,
+   "id": "e60d9216",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T23:13:46.474056Z",
@@ -771,8 +771,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.0\n",
+      "cur_extra_test_sets[0].shape --  (100000, 804)\n",
+      "2023/10/15, 13:45:17: Tuning RandomForestClassifier...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-15 17:34:40 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2023/10/15, 17:34:40: Tuning for RandomForestClassifier is finished [F1 score = 0.8125634889089931, Accuracy = 0.8127333333333332]\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ae91edc71aca40d3b3ca8692f811be57",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b04d06c2bea54361b9334d4dea8e4c6f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -794,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f4ecf359",
+   "id": "95595ebc",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -803,7 +849,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f18ced83",
+   "id": "172bf6b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:45:33.074697Z",
@@ -830,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ec366600",
+   "id": "f5a7f0db",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:50:51.036661Z",
@@ -967,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48922a79",
+   "id": "50241653",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -976,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c6df5fb",
+   "id": "1ce7a813",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -998,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "353776a6",
+   "id": "bf551230",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1020,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fff08769",
+   "id": "4eab6aef",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1029,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6eb09ab3",
+   "id": "3dc1f02a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1051,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94cbe393",
+   "id": "74afbc66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1073,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3045491a",
+   "id": "6334d653",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1082,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb263d9",
+   "id": "3bfd687f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1104,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43df80f0",
+   "id": "02e69d38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1126,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8503d29e",
+   "id": "94d4a072",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1135,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b55286f9",
+   "id": "4707de35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1157,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eccea07c",
+   "id": "be9628d2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:50:51.038061Z",
@@ -1185,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27cb4aba",
+   "id": "56362633",
    "metadata": {},
    "outputs": [],
    "source": []
