--- a/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch2-Copy1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch2-Copy1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "9c420e5c",
+   "id": "48ddaf8c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.815745Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dbcfd1bb",
+   "id": "b590b4e9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.842562Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d9ffc46c",
+   "id": "174847bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.865340Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "394ec16c",
+   "id": "a8cc80d5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.889087Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "de96c5f8",
+   "id": "5758819a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:37:11.914950Z",
@@ -81,24 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "07db0490",
+   "execution_count": 1,
+   "id": "1c6ab3ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.591524Z",
      "start_time": "2023-10-14T22:59:44.273313Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -107,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b0dafb41",
+   "execution_count": 2,
+   "id": "178279ed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.601249Z",
@@ -125,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "132b619a",
+   "execution_count": 3,
+   "id": "43fe0243",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:44.613228Z",
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae01b24c",
+   "id": "7561db89",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -160,15 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e1c9be00",
+   "execution_count": 4,
+   "id": "ee62457d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:45.963780Z",
      "start_time": "2023-10-14T22:59:44.715795Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import copy\n",
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f103069",
+   "id": "b74f8b65",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -192,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "6b78873c",
+   "execution_count": 5,
+   "id": "89e5eae3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:46.959384Z",
@@ -215,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c2d0417",
+   "id": "396ea43c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -223,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "16a61e0f",
+   "execution_count": 6,
+   "id": "34891169",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.478334Z",
@@ -238,7 +242,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "6a62a6a8",
+   "execution_count": 7,
+   "id": "691e2756",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.956511Z",
@@ -270,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "848c38ba",
+   "execution_count": 8,
+   "id": "489b4fbb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:48.985456Z",
@@ -299,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3690d4c1",
+   "id": "644afb65",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -307,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "d073eb70",
+   "execution_count": 9,
+   "id": "df65f557",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:53.444155Z",
@@ -428,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "c1dbdf11",
+   "execution_count": 10,
+   "id": "4128feeb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:53.498731Z",
@@ -456,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ff0b6aee",
+   "execution_count": 11,
+   "id": "f591fff3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.693505Z",
@@ -588,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "c657a7f7",
+   "execution_count": 12,
+   "id": "6e52f7bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.719810Z",
@@ -616,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -627,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "672a1fbd",
+   "execution_count": 13,
+   "id": "949d561d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.772881Z",
@@ -642,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5280484",
+   "id": "0508ec28",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -650,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db52015a",
+   "id": "7054e098",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -659,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "58a35978",
+   "id": "7e7f78b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.773105Z",
@@ -676,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "a1eb3ec3",
+   "id": "bac82dd2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T22:59:56.812935Z",
@@ -697,8 +701,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "83cf8ace",
+   "execution_count": null,
+   "id": "2ff8e796",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T23:13:46.474056Z",
@@ -836,7 +840,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bffcbe1",
+   "id": "de22853b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -844,8 +848,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "7b0d40f7",
+   "execution_count": 14,
+   "id": "e256aa03",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:45:33.074697Z",
@@ -858,7 +862,7 @@
     "exp_iter_num = 2\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -871,8 +875,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "9178b507",
+   "execution_count": 15,
+   "id": "c757b651",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:50:51.036661Z",
@@ -884,7 +888,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-15 08:15:48 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-15 18:27:31 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -896,7 +900,7 @@
       " 'experiment_iteration': 'Exp_iter_2',\n",
       " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 200,\n",
-      " 'session_uuid': 'af61fb46-7b08-459c-8244-ac84a537d64e'}\n",
+      " 'session_uuid': 'f97bce55-e03a-41b2-a856-e8eda10cb67f'}\n",
       "\n",
       "\n"
      ]
@@ -905,7 +909,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-15 08:15:51 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-10-15 18:27:34 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -926,7 +930,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cfcaadf0978d4889aa4197124626a689",
+       "model_id": "fbe1d82caf494b6482769ed72eb88587",
        "version_major": 2,
        "version_minor": 0
       },
@@ -948,7 +952,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-15 08:33:46 experiment_interface.py INFO    : Models config is loaded from the input file\n",
+      "2023-10-15 18:45:32 experiment_interface.py INFO    : Models config is loaded from the input file\n",
       "INFO:root:Models config is loaded from the input file\n"
      ]
     },
@@ -957,14 +961,14 @@
      "output_type": "stream",
      "text": [
       "cur_extra_test_sets[0].shape --  (100000, 806)\n",
-      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/out_of_domain_uncertainty_rich_income/tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv\n",
-      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': None, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 700, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
+      "Path for tuned params:  /home/dh3553/projects/fairness-variance/results/out_of_domain_uncertainty_rich_income/tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv\n",
+      "RandomForestClassifier:  {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': 80, 'max_features': 'sqrt', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 10, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 400, 'n_jobs': None, 'oob_score': False, 'random_state': 200, 'verbose': 0, 'warm_start': False}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05ebadbb243d45efadc96bf19efbc4cb",
+       "model_id": "feb30c1f73b94fa6975d6738c1fdae5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -978,7 +982,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "091e7626e2ba45fb9b4fac91dfb46e99",
+       "model_id": "f6e662a143b843e58dc9b68ce4f3dc06",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1009,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f0e9291",
+   "id": "8f3d7bb7",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1018,7 +1022,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c224dd74",
+   "id": "5ae29916",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1026,7 +1030,7 @@
     "exp_iter_num = 3\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1040,7 +1044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46272c8e",
+   "id": "aa8b21b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1062,7 +1066,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1a5bff35",
+   "id": "c7bbad6b",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1071,7 +1075,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c209ec6",
+   "id": "2b6656b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1079,7 +1083,7 @@
     "exp_iter_num = 4\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1093,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a346b47e",
+   "id": "8fc06847",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1115,7 +1119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b43dd975",
+   "id": "faa5e4f6",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1124,7 +1128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "098aa8ad",
+   "id": "ab71d3e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1132,7 +1136,7 @@
     "exp_iter_num = 5\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1146,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fc109c7",
+   "id": "4f7c30c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22a2f8a9",
+   "id": "fcf773fd",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1177,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cbaa68f",
+   "id": "0807a902",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1189,7 @@
     "exp_iter_num = 6\n",
     "experiment_seed = EXPERIMENT_SEEDS[exp_iter_num - 1]\n",
     "tuned_params_filenames = [\n",
-    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__043027.csv',\n",
+    "    'tuning_results_Folktables_2018_Income_alpha_0.7_exp_iter_1_20231015__204054.csv',\n",
     "]\n",
     "tuned_params_df_paths = [os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME, tuned_params_filename)\n",
     "                         for tuned_params_filename in tuned_params_filenames]\n",
@@ -1199,7 +1203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2bee2fdd",
+   "id": "a7896ca0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-14T21:50:51.038061Z",
@@ -1227,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74952a95",
+   "id": "75f27a95",
    "metadata": {},
    "outputs": [],
    "source": []
