Added started notebooks for rich exp

--- a/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch2.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4c0a48ac",
+   "execution_count": 2,
+   "id": "4bda7b58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066343Z",
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "068e200c",
+   "execution_count": 3,
+   "id": "297a7300",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066551Z",
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "2b0d6ee0",
+   "execution_count": 4,
+   "id": "f8f4fb41",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066624Z",
@@ -51,8 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "6b077d9a",
+   "execution_count": 5,
+   "id": "17e08937",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.085024Z",
@@ -66,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "8fbe4dff",
+   "execution_count": 6,
+   "id": "b1172d08",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.086646Z",
@@ -81,8 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "f5c4a7c3",
+   "execution_count": 7,
+   "id": "148c10e3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.615817Z",
@@ -98,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "8b8c0f74",
+   "execution_count": 8,
+   "id": "7b82a00b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.624868Z",
@@ -116,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "57e913b2",
+   "execution_count": 9,
+   "id": "dea25c25",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.635057Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a185327d",
+   "id": "7f36c1e0",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -151,8 +151,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "67856a8b",
+   "execution_count": 10,
+   "id": "0275c0f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.584740Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed021b7",
+   "id": "a5be5c11",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -196,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "4fb11407",
+   "execution_count": 11,
+   "id": "cb1b8dbb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.612792Z",
@@ -211,7 +211,7 @@
     "EXPERIMENT_NAME = 'out_of_domain_uncertainty_rich_income'\n",
     "DB_COLLECTION_NAME = 'out_of_domain_uncertainty'\n",
     "SAVE_RESULTS_DIR_PATH = os.path.join(ROOT_DIR, 'results', EXPERIMENT_NAME)\n",
-    "FAIR_INTERVENTION_PARAMS_LST = [0.0]\n",
+    "FAIR_INTERVENTION_PARAMS_LST = [0.7]\n",
     "\n",
     "config_yaml_path = os.path.join(ROOT_DIR, 'notebooks', EXPERIMENT_NAME, 'rich_income_2018_config.yaml')\n",
     "metrics_computation_config = create_config_obj(config_yaml_path=config_yaml_path)"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa793c4",
+   "id": "73239174",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "02d2891d",
+   "execution_count": 12,
+   "id": "92cf83bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.635294Z",
@@ -242,7 +242,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,8 +257,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "9c5d5ce8",
+   "execution_count": 13,
+   "id": "910edf58",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.991818Z",
@@ -274,8 +274,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "573fae02",
+   "execution_count": 14,
+   "id": "fa949e7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:19.021346Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae8c9f2",
+   "id": "99e9266a",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -311,8 +311,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "005daef1",
+   "execution_count": 15,
+   "id": "9cdc62a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.342383Z",
@@ -432,7 +432,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,8 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4bee3b2a",
+   "execution_count": 16,
+   "id": "d68bd7d2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.380074Z",
@@ -460,7 +460,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,8 +471,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "2de927ad",
+   "execution_count": 17,
+   "id": "98f2869f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.460383Z",
@@ -592,7 +592,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,8 +605,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "1d2276c4",
+   "execution_count": 18,
+   "id": "63d5a443",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.512345Z",
@@ -620,7 +620,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,8 +631,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "8d77c5d8",
+   "execution_count": 19,
+   "id": "230df15b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.528561Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee5308f3",
+   "id": "ad203d26",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e290e1ee",
+   "id": "cff740dc",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -662,8 +662,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "9902c807",
+   "execution_count": 20,
+   "id": "f736b380",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.548691Z",
@@ -679,8 +679,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "42822fd3",
+   "execution_count": 21,
+   "id": "6dd89349",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.594507Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369a034f",
+   "id": "c10c825b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.061277Z",
@@ -714,7 +714,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:04:14 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-10-21 09:10:05 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -724,7 +724,7 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.0]',\n",
+      " 'fair_intervention_params_lst': '[0.7]',\n",
       " 'model_init_seed': 100,\n",
       " 'session_uuid': '9af761cf-de63-4868-b8c1-75c7ee25103b'}\n",
       "\n",
@@ -735,7 +735,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:04:14 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-10-21 09:10:05 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -746,30 +746,24 @@
       "In-domain full_df.shape --  (100000, 9)\n",
       "In-domain init_features_df.shape --  (100000, 10)\n",
       "In-domain X_train_val.shape --  (90000, 805)\n",
-      "In-domain X_test.shape --  (10000, 805)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-10-21 09:04:16 experiment_interface.py INFO    : The dataset is preprocessed\n",
-      "INFO:root:The dataset is preprocessed\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "In-domain X_test.shape --  (10000, 805)\n",
       "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
       "Out-of-domain 1 X_train_val.shape --  (0, 0)\n",
       "Out-of-domain 1 X_test.shape --  (10000, 805)\n"
      ]
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-21 09:10:06 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b50aac5a5e8a455b8adf057ea9b3ce65",
+       "model_id": "2790972eb910442dafd95bf92a3abeb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +778,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:04:16 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-10-21 09:10:07 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -792,14 +786,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.0\n"
+      "intervention_param:  0.7\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-21 09:14:20 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-10-21 09:19:00 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -932,8 +926,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.384674</td>\n",
-       "      <td>0.153486</td>\n",
+       "      <td>0.319698</td>\n",
+       "      <td>0.076031</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -981,7 +975,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.564623</td>\n",
-       "      <td>-1.008337</td>\n",
+       "      <td>-1.085792</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1013,9 +1007,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.229370   0.153486  \n",
        "25747          0.0          0.0          0.0   1.489276  -2.325070  \n",
-       "13795          0.0          0.0          0.0   0.384674   0.153486  \n",
+       "13795          0.0          0.0          0.0   0.319698   0.076031  \n",
        "68724          0.0          0.0          0.0  -1.499646  -0.621062  \n",
-       "38923          0.0          0.0          0.0  -1.564623  -1.008337  \n",
+       "38923          0.0          0.0          0.0  -1.564623  -1.085792  \n",
        "\n",
        "[5 rows x 804 columns]"
       ]
@@ -1107,8 +1101,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.839510</td>\n",
-       "      <td>0.153486</td>\n",
+       "      <td>0.644581</td>\n",
+       "      <td>-0.156333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1131,8 +1125,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.254721</td>\n",
-       "      <td>1.315310</td>\n",
+       "      <td>0.124768</td>\n",
+       "      <td>0.850580</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1203,8 +1197,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.709557</td>\n",
-       "      <td>0.540761</td>\n",
+       "      <td>0.514627</td>\n",
+       "      <td>0.230941</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1234,11 +1228,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.839510   0.153486  \n",
-       "25747          0.0          0.0          0.0   0.254721   1.315310  \n",
+       "22422          0.0          0.0          0.0   0.644581  -0.156333  \n",
+       "25747          0.0          0.0          0.0   0.124768   0.850580  \n",
        "13795          0.0          0.0          0.0  -0.979834   0.153486  \n",
        "68724          0.0          0.0          0.0  -0.654951  -2.634889  \n",
-       "38923          0.0          0.0          0.0   0.709557   0.540761  \n",
+       "38923          0.0          0.0          0.0   0.514627   0.230941  \n",
        "\n",
        "[5 rows x 804 columns]"
       ]
@@ -1250,7 +1244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 09:14:21: Tuning RandomForestClassifier...\n"
+      "2023/10/21, 09:19:00: Tuning RandomForestClassifier...\n"
      ]
     }
    ],
@@ -1273,7 +1267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80cb0073",
+   "id": "84d6886b",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1281,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beddeecb",
+   "id": "f8358d0f",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1289,7 +1283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d0c31d",
+   "id": "6a23dc7a",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1297,7 +1291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6746d0a",
+   "id": "795c0a1b",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1305,7 +1299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac0acf9f",
+   "id": "c70de9fe",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1313,8 +1307,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "56c0eb6b",
+   "execution_count": null,
+   "id": "2f2b236b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.079140Z",
