--- a/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch1.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income/Income_2018_Batch1.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4c0a48ac",
+   "id": "7d41025d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066343Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "068e200c",
+   "id": "dbb31421",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066551Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2b0d6ee0",
+   "id": "8a463cda",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.066624Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6b077d9a",
+   "id": "eb31ea3b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.085024Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8fbe4dff",
+   "id": "139b97c5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.086646Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f5c4a7c3",
+   "id": "687d8e79",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.615817Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8b8c0f74",
+   "id": "c8e5f5f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.624868Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "57e913b2",
+   "id": "997f673f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:15.635057Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a185327d",
+   "id": "64fab556",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "67856a8b",
+   "id": "82767be5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.584740Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed021b7",
+   "id": "24b23786",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "4fb11407",
+   "id": "4f251626",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.612792Z",
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa793c4",
+   "id": "9a746c97",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -228,7 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "02d2891d",
+   "id": "9c9d2b76",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.635294Z",
@@ -258,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9c5d5ce8",
+   "id": "bbc911a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:18.991818Z",
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "573fae02",
+   "id": "d38dfb74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:19.021346Z",
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dae8c9f2",
+   "id": "f5795a33",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "005daef1",
+   "id": "3f442727",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.342383Z",
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4bee3b2a",
+   "id": "1e2761a4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:22.380074Z",
@@ -472,7 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2de927ad",
+   "id": "8cd5575f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.460383Z",
@@ -606,7 +606,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1d2276c4",
+   "id": "89fba97c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.512345Z",
@@ -632,7 +632,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "8d77c5d8",
+   "id": "c301c3d4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.528561Z",
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee5308f3",
+   "id": "6425909c",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e290e1ee",
+   "id": "ab58b0c5",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9902c807",
+   "id": "fc712336",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.548691Z",
@@ -680,7 +680,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "42822fd3",
+   "id": "189ae695",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:34:25.594507Z",
@@ -702,7 +702,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "369a034f",
+   "id": "ac757e41",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.061277Z",
@@ -1250,8 +1250,46 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/10/21, 09:14:21: Tuning RandomForestClassifier...\n"
+      "2023/10/21, 09:14:21: Tuning RandomForestClassifier...\n",
+      "2023/10/21, 12:11:46: Tuning for RandomForestClassifier is finished [F1 score = 0.8125634889089931, Accuracy = 0.8127333333333332]\n",
+      "\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-21 12:11:46 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "INFO:root:Models are tuned and saved to a file\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d61cdc33253f4910aeb636091a197885",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Analyze models in one run:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7f60c52d75cc4803b0b90399e333045c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Classifiers testing by bootstrap:   0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -1273,7 +1311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "80cb0073",
+   "id": "e1513dd4",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1281,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beddeecb",
+   "id": "a21c63ac",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1289,7 +1327,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1d0c31d",
+   "id": "0d592beb",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -1297,7 +1335,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6746d0a",
+   "id": "423b79c5",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -1305,7 +1343,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac0acf9f",
+   "id": "2ce5c428",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -1314,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "56c0eb6b",
+   "id": "5bbe0931",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T12:41:40.079140Z",
